[CM-100] #REVIEW 'analyze:quality' {Update test coverage, PMD; Findbugs etc.}